# rfc3987-syntax

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/rfc3987_helpers/: helpers.py
src/rfc3987_syntax/: syntax_helpers.py  syntax_rfc3987.lark
tests/: invalid.json  invalid_syntax.json  test_invalid.py  test_syntax.py  test_valid.py  valid_syntax.json
